[test] Disable jobserver with make check.
make -j check has the unfortunate side-effect of performing the summary
before the TESTS have completed, both hiding in the stream of test
output and making it useless. Forcibly disable the jobserver so that the
summary is always last at the expense of not compiling the tests in parallel.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -711,7 +711,9 @@ svg-surface			\
 user-data
 
 # A hook that summarises the failures
-check: AM_MAKEFLAGS+=-k
+# We need to both force make to keep going after failures and to disable the
+# jobserver (parallel builds).
+check: AM_MAKEFLAGS+=-k -j1
 check-local:
 	@FAILED_TESTS=""; \
 	for t in $(TESTS:$(EXEEXT)=.log); do \
