Update several pdf-specific reference images
I don't know if we made minor changes to the pdf backend, or
if this was due to a poppler change, (we recently bumped the
poppler required for testing up to 0.8.0), but any way around
it these test results look just as good as the reference images
they are replacing.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -403,9 +403,11 @@ REFERENCE_IMAGES = \
 	ft-show-glyphs-positioning-svg-ref.png		\
 	ft-show-glyphs-table-ref.png			\
 	ft-show-glyphs-table-ps-ref.png			\
+	ft-text-vertical-layout-type1-pdf-ref.png	\
 	ft-text-vertical-layout-type1-ps-ref.png	\
 	ft-text-vertical-layout-type1-ref.png	\
 	ft-text-vertical-layout-type1-svg-ref.png	\
+	ft-text-vertical-layout-type3-pdf-ref.png	\
 	ft-text-vertical-layout-type3-ps-ref.png	\
 	ft-text-vertical-layout-type3-ref.png	\
 	ft-text-vertical-layout-type3-svg-ref.png	\
