[test] Add group-paint
The experience of running the entire test suite under cairo_push_group()
did at least reveal that there was a potential bug in the pdf backend.
This test is just the simplest of drawing operations - simply filling
the similar surface with solid blue, and then blitting that surface to
the destination.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -84,6 +84,7 @@ glitz-surface-source
 glyph-cache-pressure
 gradient-alpha
 gradient-zero-stops
+group-paint
 imagediff
 image-surface-source
 infinite-join
