[test] Add a regression test for bug 10921
This bug first was fixed in 40558cb15e5f7276a29847b00c9dae08b9d9380e,
but then reintroduced in 9cfd82e87b60c0d65e9cafda026cb9a498874575, which
became part of the 1.6.2 quick release.

As penance to make sure I never repeat this same bug again, I offer this
test case which exercises the XSetClipMask(NULL) path and hopefully
simulates some 'typical' usage of cairo by GUI toolkits.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -200,6 +200,7 @@ truetype-tables
 unantialiased-shapes
 unbounded-operator
 user-data
+xlib-expose-event
 xlib-surface
 xlib-surface-source
 zero-alpha
