[Makefile.am] Add cairo-pdf-operators*.[ch] to ps_sources
The postscript backends depends upon cairo-pdf-operators.c, so list it
as a requirement in ps_sources. This enables the postscript backend to
build even if the pdf backend is disable by the user during configure.

(Fixes http://bugs.freedesktop.org/show_bug.cgi?id=15532.)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -99,7 +99,8 @@ font_subset_sources += $(font_subset_sources_ft)
 endif
 
 ps_headers = cairo-ps.h
-ps_sources = cairo-ps-surface.c cairo-ps-surface-private.h
+ps_sources = cairo-ps-surface.c cairo-ps-surface-private.h \
+	     cairo-pdf-operators.c cairo-pdf-operators-private.h
 cairo_all_sources += $(ps_headers) $(ps_sources)
 if CAIRO_HAS_PS_SURFACE
 libcairo_font_subset_sources =	$(font_subset_sources)
