--- a/configure.in
+++ b/configure.in
@@ -109,7 +109,19 @@ AC_DEFUN([_CHECK_FUNCS_WITH_FLAGS],
 dnl ===========================================================================
 
 AC_CHECK_FUNCS(vasnprintf ctime_r drand48)
-	
+
+AC_MSG_CHECKING([for Sun Solaris (non-POSIX ctime_r)])
+case "$host" in
+    *-*-solaris*)
+	CFLAGS="$CFLAGS -D_POSIX_PTHREAD_SEMANTICS"
+	solaris_posix_pthread=yes
+	;;
+    *)
+	solaris_posix_pthread=no
+	;;
+esac
+AC_MSG_RESULT([$solaris_posix_pthread])
+
 dnl ===========================================================================
 dnl
 dnl Test for native atomic operations.
