Add large-font test to exercise a cairo-xlib bug.
The original bug report is here:

	corrupt glyph positions with large font
	https://bugzilla.redhat.com/show_bug.cgi?id=448104

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -92,6 +92,7 @@ infinite-join
 in-fill-empty-trapezoid
 in-fill-trapezoid
 invalid-matrix
+large-font
 large-source
 leaky-dash
 leaky-dashed-rectangle
