[cairo-mutex] Prepare mutex infrastructure for adding mutex debugging facilities
Essentially renaming cairo-mutex-type-private.h to cairo-mutex-impl-private.h
and changing all its namespace from cairo_mutex to cairo_mutex_impl.
cairo-mutex-type-private.h then does all the sanity checks on the
implementation that used to be in cairo-mutex-private.h.  Plus, defines macros
for the cairo-mutex namespace to map to the cairo-mutex-impl namespace.  This
extra mapping layer allows for add debugging facilities.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -36,6 +36,7 @@ cairo_base_sources =				\
 	cairo-matrix.c				\
 	cairo-mutex.c				\
 	cairo-mutex-private.h			\
+	cairo-mutex-impl-private.h		\
 	cairo-mutex-type-private.h		\
 	cairo-path.c				\
 	cairo-path-private.h			\
