Implement PDF Type 3 font subsetting of user fonts
show_glyphs inside a Type 3 font currently results in a fallback
image. Some refactoring is required before font subsets can be created
while emitting all the font subsets.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -89,6 +89,8 @@ font_subset_sources_base =			\
 	cairo-type1-fallback.c			\
 	cairo-type1-private.h			\
 	cairo-truetype-subset-private.h		\
+        cairo-type3-glyph-surface.c             \
+        cairo-type3-glyph-surface-private.h     \
 	cairo-scaled-font-subsets.c		\
 	cairo-scaled-font-subsets-private.h
 cairo_all_sources += $(font_subset_sources_base)
