--- a/test/.gitignore
+++ b/test/.gitignore
@@ -1,3 +1,4 @@
+TAGS
 .deps
 .libs
 Makefile
@@ -204,6 +205,7 @@ unantialiased-shapes
 unbounded-operator
 user-data
 user-font
+user-font-proxy
 xlib-expose-event
 xlib-surface
 xlib-surface-source
