--- a/Makefile.win32
+++ b/Makefile.win32
@@ -26,7 +26,7 @@ DEFAULT_CFLAGS += -DCAIRO_NO_MUTEX=1  -DLIBCAIRO_EXPORTS
 CFLAGS := $(DEFAULT_CFLAGS)
 
 CAIRO_VERSION_MAJOR = 1
-CAIRO_VERSION_MINOR = 5
+CAIRO_VERSION_MINOR = 7
 CAIRO_VERSION_MICRO = 1
 
 CAIRO_VERSION = $(CAIRO_VERSION_MAJOR).$(CAIRO_VERSION_MINOR).$(CAIRO_VERSION_MICRO)
@@ -40,16 +40,23 @@ TEST_SUBDIRS = boilerplate test
 
 all: inform cairo
 
+src/cairo-features.h:
+	@echo Warning: creating default cairo-features.h
+	@(cat src/cairo-features-win32.h | \
+	      sed 's,@CAIRO_VERSION_MAJOR@,'$(CAIRO_VERSION_MAJOR)',g' | \
+	      sed 's,@CAIRO_VERSION_MINOR@,'$(CAIRO_VERSION_MINOR)',g' | \
+	      sed 's,@CAIRO_VERSION_MICRO@,'$(CAIRO_VERSION_MICRO)',g' > src/cairo-features.h)
+
 cairo: src/cairo-features.h
 	@list='$(SUBDIRS)'; for f in $$list ; do \
 		echo making all in $$f... ; \
-		(cd $$f ; $(MAKE) -f Makefile.win32 CC="$(CC)" LINK="$(LINK)" OPT="$(OPT)" CFLAGS="$(CFLAGS)" PIXMAN_LIBS="$(PIXMAN_LIBS)") || exit 1 ; \
+		($(MAKE) -C $$f -f Makefile.win32) || exit 1 ; \
 	done
 
 test: cairo
 	@list='$(TEST_SUBDIRS)'; for f in $$list ; do \
 		echo making all in $$f... ; \
-		(cd $$f ; $(MAKE) -f Makefile.win32 CC="$(CC)" LINK="$(LINK)" OPT="$(OPT)" CFLAGS="$(CFLAGS)" PIXMAN_LIBS="$(PIXMAN_LIBS)") || exit 1 ; \
+		($(MAKE) -C $$f -f Makefile.win32) || exit 1 ; \
 	done
 	@(cd test ; make -f Makefile.win32 test)
 
